script/kind-session-persistence/tests/gateway-xbackendpolicy-disabled/xbackendtrafficpolicy.yaml
---
apiVersion: gateway.networking.x-k8s.io/v1alpha1
kind: XBackendTrafficPolicy
metadata:
  name: whoami-xbtp-disabled
  namespace: default
spec:
  targetRefs:
    - group: ""
      kind: Service
      name: whoami-xbtp-disabled
  sessionPersistence:
    type: Header
    sessionName: X-Policy-Session
